--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to a simple Node.js App!</h1>
+    <h1>Hello World</h1>
     <p>This page is served by an Express application.</p>
   </div>
 </body>
